; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/extr_bhnd_erom.c_bhnd_erom_iores_fini.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/extr_bhnd_erom.c_bhnd_erom_iores_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bhnd_erom_io = type { i32 }
%struct.bhnd_erom_iores = type { i32, i32*, i32 }

@SYS_RES_MEMORY = common dso_local global i32 0, align 4
@M_BHND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bhnd_erom_io*)* @bhnd_erom_iores_fini to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bhnd_erom_iores_fini(%struct.bhnd_erom_io* %0) #0 {
  %2 = alloca %struct.bhnd_erom_io*, align 8
  %3 = alloca %struct.bhnd_erom_iores*, align 8
  store %struct.bhnd_erom_io* %0, %struct.bhnd_erom_io** %2, align 8
  %4 = load %struct.bhnd_erom_io*, %struct.bhnd_erom_io** %2, align 8
  %5 = bitcast %struct.bhnd_erom_io* %4 to %struct.bhnd_erom_iores*
  store %struct.bhnd_erom_iores* %5, %struct.bhnd_erom_iores** %3, align 8
  %6 = load %struct.bhnd_erom_iores*, %struct.bhnd_erom_iores** %3, align 8
  %7 = getelementptr inbounds %struct.bhnd_erom_iores, %struct.bhnd_erom_iores* %6, i32 0, i32 1
  %8 = load i32*, i32** %7, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %26

10:                                               ; preds = %1
  %11 = load %struct.bhnd_erom_iores*, %struct.bhnd_erom_iores** %3, align 8
  %12 = getelementptr inbounds %struct.bhnd_erom_iores, %struct.bhnd_erom_iores* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 8
  %14 = load i32, i32* @SYS_RES_MEMORY, align 4
  %15 = load %struct.bhnd_erom_iores*, %struct.bhnd_erom_iores** %3, align 8
  %16 = getelementptr inbounds %struct.bhnd_erom_iores, %struct.bhnd_erom_iores* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.bhnd_erom_iores*, %struct.bhnd_erom_iores** %3, align 8
  %19 = getelementptr inbounds %struct.bhnd_erom_iores, %struct.bhnd_erom_iores* %18, i32 0, i32 1
  %20 = load i32*, i32** %19, align 8
  %21 = call i32 @bhnd_release_resource(i32 %13, i32 %14, i32 %17, i32* %20)
  %22 = load %struct.bhnd_erom_iores*, %struct.bhnd_erom_iores** %3, align 8
  %23 = getelementptr inbounds %struct.bhnd_erom_iores, %struct.bhnd_erom_iores* %22, i32 0, i32 1
  store i32* null, i32** %23, align 8
  %24 = load %struct.bhnd_erom_iores*, %struct.bhnd_erom_iores** %3, align 8
  %25 = getelementptr inbounds %struct.bhnd_erom_iores, %struct.bhnd_erom_iores* %24, i32 0, i32 0
  store i32 -1, i32* %25, align 8
  br label %26

26:                                               ; preds = %10, %1
  %27 = load %struct.bhnd_erom_io*, %struct.bhnd_erom_io** %2, align 8
  %28 = load i32, i32* @M_BHND, align 4
  %29 = call i32 @free(%struct.bhnd_erom_io* %27, i32 %28)
  ret void
}

declare dso_local i32 @bhnd_release_resource(i32, i32, i32, i32*) #1

declare dso_local i32 @free(%struct.bhnd_erom_io*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
